--- a/src/main/webapp/fe/css/order-confirm.css
+++ b/src/main/webapp/fe/css/order-confirm.css
@@ -1,9 +1,4 @@
-/*
-* @Author: Rosen
-* @Date:   2017-05-18 19:30:20
-* @Last Modified by:   Rosen
-* @Last Modified time: 2017-05-23 20:03:49
-*/
+
 /* 通用头部导航 */
 
 .header .logo{
@@ -67,12 +62,7 @@
     .crumb{
     font-size: 35px;
 }
-}/*
-* @Author: Rosen
-* @Date:   2017-05-17 14:16:54
-* @Last Modified by:   Rosen
-* @Last Modified time: 2017-05-17 16:31:15
-*/
+}
 .nav{
     background: #eee;
     height: 30px;
@@ -117,7 +107,7 @@
     cursor: pointer;
 }
 .address-item.active{
-    border: 3px dashed #c60023;
+    border: 3px dashed #6495ed;
 }
 .address-item:hover,
 .address-add:hover{
@@ -206,7 +196,7 @@
 .submit-con .submit-total{
     margin-right: 20px;
     font-size: 18px;
-    color: #c60023;
+    color: #6495ed;
     font-weight: bold;
     vertical-align: middle;
 }
@@ -314,5 +304,28 @@
 .submit-con .order-submit{
     width: 150px;
     font-size: 30px;
+}
+.modal .modal-container {
+    width: 880px;
+    height: 800px;
+}
+.modal .modal-container .modal-header .modal-title {
+    font-size: 34px;
+}
+.form .form-line {
+    height: 100px;
+}
+.form .form-line .label {
+    width: 185px;
+    height: 50px;
+    font-size: 30px;
+}
+.form .form-line .form-item {
+    height: 50px;
+    font-size: 30px;
+}
+.form .form-line .btn {
+    font-size: 35px;
+    width: 80px;
 }
 }
