--- a/src/main/webapp/fe/view/comment-add.html
+++ b/src/main/webapp/fe/view/comment-add.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="utf-8">
+    <head>
+        <meta charset="utf-8">
 <meta http-equiv="x-ua-compatible" content="ie=edge">
 <meta name="keywords" content="eshop">
 <meta name="description" content="ESHOP电子产品公司">
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="viewport" content="width=100px, initial-scale=1, maximum-scale=1">
 
-    <title>订单详情 - ESHOP电子</title>
-<link href="../css/common.css?5bffb66769e2c3835673" rel="stylesheet"><link href="../css/order-detail.css?5bffb66769e2c3835673" rel="stylesheet"></head>
-<body>
-<div class="nav">
+        <title>评价商品 - ESHOP电子</title>
+    <link href="../css/common.css?5bffb66769e2c3835673" rel="stylesheet"><link href="../css/comment-add.css?5bffb66769e2c3835673" rel="stylesheet"></head>
+    <body>
+        <div class="nav">
     <div class="w">
         <div class="user-info">
             <span class="user not-login">
@@ -45,7 +45,7 @@
         </ul>
     </div>
 </div>
-<div class="header">
+        <div class="header">
     <div class="w">
         <a class="logo" href="./index.html">ESHOP电子</a>
         <div class="search-con">
@@ -54,27 +54,21 @@
         </div>
     </div>
 </div>
-<div class="crumb">
-    <div class="w">
-        <div class="crumb-con">
-            <a class="link" href="./index.html">ESHOP</a>
-            <span>></span>
-            <span class="link-text">订单详情</span>
+        <div class="crumb">
+            <div class="w">
+                <div class="crumb-con">
+                    <a class="link" href="./index.html">eshop</a>
+                    <span>></span>
+                    <span class="link-text">评价商品</span>
+                </div>
+            </div>
         </div>
-    </div>
-</div>
-<div class="page-wrap w">
-    <ul class="nav-side">
-    
-</ul>
-    <div class="content with-nav">
-
-    </div>
-</div>
-<div class="modal-wrap">
-
-</div>
-<div class="footer">
+        <div class="page-wrap w">
+            </br>
+            <textarea class="comment-text" id="comment" rows="5" cols="40"></textarea>
+            </br><a class="btn btn-submit" id="submit">提交</a>
+        </div>
+        <div class="footer">
     <div class="w">
         <div class="links">
             <a class="link" href="http://www.sise.com.cn" target="_blank">华软</a> |
@@ -89,5 +83,5 @@
 </div>
 <script type="text/javascript" src="http://cdn.bootcss.com/jquery/1.11.3/jquery.min.js
 "></script>
-<script type="text/javascript" src="../js/base.js?5bffb66769e2c3835673"></script><script type="text/javascript" src="../js/order-detail.js?5bffb66769e2c3835673"></script></body>
+    <script type="text/javascript" src="../js/base.js?5bffb66769e2c3835673"></script><script type="text/javascript" src="../js/comment-add.js?5bffb66769e2c3835673"></script></body>
 </html>
