--- a/src/main/webapp/fe/css/comment-add.css
+++ b/src/main/webapp/fe/css/comment-add.css
@@ -96,34 +96,22 @@
     display: inline-block;
     margin-left: 5px;
 }
-.page-wrap{
-    background: #ffffff;
-    padding: 10px 0 25px 0;
-}
-.payment-tips{
-    height: 40px;
-    line-height: 40px;
-    font-size: 18px;
-    font-weight: bold;
-    color: #666666;
-    text-align: center;
-}
-.payment-tips.enhance{
-    color: #6495ed;
-}
-.img-con{
-    margin: 0 auto;
-    width:300px;
+.comment-text{
+    width: 800px;
     height: 300px;
-    background: #ffffff;
-    border: 1px solid #ffffff;
+    font-size: 30px;
+    margin : 50px;
 }
-.img-con .qr-code{
-    width: 100%;
-    height: 100%;
+.product-info{
+	font-size: 30px;
 }
 @media(max-width: 500px){
-.payment-tips {
-    font-size: 30px;
+.btn-submit{
+    width: 100px;
+    height: 60px;
+    font-size: 40px;
+}
+.product-info{
+	font-size: 50px;
 }
 }
