--- a/src/main/webapp/fe/css/order-detail.css
+++ b/src/main/webapp/fe/css/order-detail.css
@@ -1,9 +1,4 @@
-/*
-* @Author: Rosen
-* @Date:   2017-05-18 19:30:20
-* @Last Modified by:   Rosen
-* @Last Modified time: 2017-05-23 20:03:49
-*/
+
 /* 通用头部导航 */
 
 .header .logo{
@@ -67,12 +62,7 @@
     .crumb{
     font-size: 35px;
 }
-}/*
-* @Author: Rosen
-* @Date:   2017-05-17 14:16:54
-* @Last Modified by:   Rosen
-* @Last Modified time: 2017-05-17 16:31:15
-*/
+}
 .nav{
     background: #eee;
     height: 30px;
@@ -106,12 +96,7 @@
     display: inline-block;
     margin-left: 5px;
 }
-/*
-* @Author: Rosen
-* @Date:   2017-05-19 17:39:34
-* @Last Modified by:   Rosen
-* @Last Modified time: 2017-05-19 19:48:20
-*/
+
 /* 导航主体 */
 .nav-side{
     float: left;
@@ -207,7 +192,7 @@
 }
 .total .total-price{
     font-weight: bold;
-    color: #c60023;
+    color: #6495ed;
 }
 
 @media(max-width: 500px){
