--- a/src/main/webapp/fe/css/result.css
+++ b/src/main/webapp/fe/css/result.css
@@ -1,9 +1,3 @@
-/*
-* @Author: Rosen
-* @Date:   2017-05-19 21:52:52
-* @Last Modified by:   Rosen
-* @Last Modified time: 2017-05-19 22:45:55
-*/
 .page-wrap{
     padding: 30px 0;
     margin-top: 20px;
@@ -31,12 +25,7 @@
 .result-con .result-title{
    font-size: 60px;
 }
-}/*
-* @Author: Rosen
-* @Date:   2017-05-17 11:26:31
-* @Last Modified by:   Rosen
-* @Last Modified time: 2017-05-23 20:04:16
-*/
+}
 .nav-simple{
     height: 60px;
     line-height: 60px;
