--- a/src/main/webapp/fe/css/user-pass-reset.css
+++ b/src/main/webapp/fe/css/user-pass-reset.css
@@ -1,9 +1,4 @@
-/*
-* @Author: Rosen
-* @Date:   2017-05-17 11:26:31
-* @Last Modified by:   Rosen
-* @Last Modified time: 2017-05-23 20:04:16
-*/
+
 .nav-simple{
     height: 60px;
     line-height: 60px;
@@ -15,14 +10,7 @@
     font-weight: bold;
     color: #5CACEE;
     text-decoration: none;
-}/*
-* @Author: Rosen
-* @Date:   2017-05-23 11:50:40
-* @Last Modified by:   Rosen
-* @Last Modified time: 2017-05-23 12:55:57
-*/
-
-/* 最外层容器 */
+}/* 最外层容器 */
 .page-wrap{
     padding: 40px 0;
 }
@@ -113,3 +101,4 @@
     margin-left: 10px;
     color: #999;
 }
+
