--- a/src/main/webapp/fe/css/user-pass-update.css
+++ b/src/main/webapp/fe/css/user-pass-update.css
@@ -1,9 +1,4 @@
-/*
-* @Author: Rosen
-* @Date:   2017-05-18 19:30:20
-* @Last Modified by:   Rosen
-* @Last Modified time: 2017-05-23 20:03:49
-*/
+
 /* 通用头部导航 */
 
 .header .logo{
@@ -67,12 +62,7 @@
     .crumb{
     font-size: 35px;
 }
-}/*
-* @Author: Rosen
-* @Date:   2017-05-17 14:16:54
-* @Last Modified by:   Rosen
-* @Last Modified time: 2017-05-17 16:31:15
-*/
+}
 .nav{
     background: #eee;
     height: 30px;
@@ -106,12 +96,7 @@
     display: inline-block;
     margin-left: 5px;
 }
-/*
-* @Author: Rosen
-* @Date:   2017-05-19 17:39:34
-* @Last Modified by:   Rosen
-* @Last Modified time: 2017-05-19 19:48:20
-*/
+
 /* 导航主体 */
 .nav-side{
     float: left;
@@ -139,13 +124,7 @@
     color: #888;
     font-size: 25px;
 }
-}/*
-* @Author: Rosen
-* @Date:   2017-05-24 11:04:03
-* @Last Modified by:   Rosen
-* @Last Modified time: 2017-05-24 17:11:30
-*/
-.form-line{
+}.form-line{
     margin-bottom: 10px;
     height: 30px;
     line-height: 30px;
@@ -161,4 +140,20 @@
     line-height: 25px;
     width: 200px;
     font-size: 14px;
+}
+
+@media(max-width: 500px){
+   .form-line{
+    height: 70px;
+} 
+.form-line .label{
+    width: 180px;
+    font-size: 30px;
+}
+.form-line .input{
+    height: 35px;
+    width: 300px;
+    font-size: 30px;
+}
+
 }
