--- a/src/main/webapp/fe/view/about.html
+++ b/src/main/webapp/fe/view/about.html
@@ -9,7 +9,7 @@
 <meta name="viewport" content="width=100px, initial-scale=1, maximum-scale=1">
 
         <title>关于页面 - ESHOP电子</title>
-    <link href="../css/common.css?5fb466d57efeffeab18b" rel="stylesheet"><link href="../css/about.css?5fb466d57efeffeab18b" rel="stylesheet"></head>
+    <link href="../css/common.css?5bffb66769e2c3835673" rel="stylesheet"><link href="../css/about.css?5bffb66769e2c3835673" rel="stylesheet"></head>
     <body>
         <div class="nav">
     <div class="w">
@@ -67,7 +67,7 @@
             <div class="panel">
                 <h1 class="panel-title">关于我们</h1>
                 <div class="panel-body">
-                    ESHOP电子产品有限公司
+                    ESHOP电子产品有限公司,制造并销售电视，游戏机，手机等电子产品。
                 </div>
             </div>
         </div>
@@ -80,11 +80,11 @@
             <a class="link" href="https://www.zhihu.com" target="_blank">知乎</a>
         </div>
         <p class="copyright">
-            Copyright © 2017 eshop.com All Right Reserved
+            Copyright © 2018 eshop.com All Right Reserved
         </p>
     </div>
 </div>
 <script type="text/javascript" src="http://cdn.bootcss.com/jquery/1.11.3/jquery.min.js
 "></script>
-    <script type="text/javascript" src="../js/base.js?5fb466d57efeffeab18b"></script><script type="text/javascript" src="../js/about.js?5fb466d57efeffeab18b"></script></body>
+    <script type="text/javascript" src="../js/base.js?5bffb66769e2c3835673"></script><script type="text/javascript" src="../js/about.js?5bffb66769e2c3835673"></script></body>
 </html>
