--- a/src/main/webapp/fe/view/index.html
+++ b/src/main/webapp/fe/view/index.html
@@ -9,7 +9,7 @@
 <meta name="viewport" content="width=100px, initial-scale=1, maximum-scale=1">
 
         <title>首页 - ESHOP电子</title>
-    <link href="../css/common.css?5fb466d57efeffeab18b" rel="stylesheet"><link href="../css/index.css?5fb466d57efeffeab18b" rel="stylesheet"></head>
+    <link href="../css/common.css?5bffb66769e2c3835673" rel="stylesheet"><link href="../css/index.css?5bffb66769e2c3835673" rel="stylesheet"></head>
     <body>
         <div class="nav">
     <div class="w">
@@ -62,176 +62,176 @@
         </div>
         <div class="w">
             <div class="floor-wrap">
-                <h1 class="floor-title">F1 家用电器</h1>
+                <h1 class="floor-title">ESHOP电视</h1>
                 <ul class="floor-list">
                     <li class="floor-item">
                         <a href="./list.html?categoryId=100006">
-                            <span class="floor-text">双开门冰箱</span>
-                            <img class="floor-img" src="../resource/floor1-1.jpg" alt="双开门冰箱" />
+                            <span class="floor-text">液晶电视</span>
+                            <img class="floor-img" src="../resource/floor1-1.jpg" alt="液晶电视" />
                         </a>
                     </li>
                     <li class="floor-item">
                         <a href="./list.html?categoryId=100007">
-                            <span class="floor-text">电视</span>
-                            <img class="floor-img" src="../resource/floor1-2.jpg" alt="电视" />
+                            <span class="floor-text">曲面电视</span>
+                            <img class="floor-img" src="../resource/floor1-2.jpg" alt="曲面电视" />
                         </a>
                     </li>
                     <li class="floor-item">
                         <a href="./list.html?categoryId=100008">
-                            <span class="floor-text">洗衣机</span>
-                            <img class="floor-img" src="../resource/floor1-3.jpg" alt="洗衣机" />
+                            <span class="floor-text">4K超高清电视</span>
+                            <img class="floor-img" src="../resource/floor1-3.jpg" alt="4K超高清电视" />
                         </a>
                     </li>
                     <li class="floor-item">
                         <a href="./list.html?categoryId=100009">
-                            <span class="floor-text">空调</span>
-                            <img class="floor-img" src="../resource/floor1-4.jpg" alt="空调" />
+                            <span class="floor-text">普通电视</span>
+                            <img class="floor-img" src="../resource/floor1-4.jpg" alt="普通电视" />
                         </a>
                     </li>
                     <li class="floor-item">
                         <a href="./list.html?categoryId=100010">
-                            <span class="floor-text">热水器</span>
-                            <img class="floor-img" src="../resource/floor1-5.jpg" alt="热水器" />
+                            <span class="floor-text">激光电视</span>
+                            <img class="floor-img" src="../resource/floor1-5.jpg" alt="激光电视" />
                         </a>
                     </li>
                 </ul>
             </div>
             <div class="floor-wrap">
-                <h1 class="floor-title">F2 数码3C</h1>
+                <h1 class="floor-title">ESHOP游戏机</h1>
                 <ul class="floor-list">
                     <li class="floor-item">
                         <a href="./list.html?categoryId=100011">
-                            <span class="floor-text">笔记本电脑</span>
-                            <img class="floor-img" src="../resource/floor2-1.jpg" alt="笔记本电脑" />
+                            <span class="floor-text">PS4</span>
+                            <img class="floor-img" src="../resource/floor2-1.jpg" alt="PS4" />
                         </a>
                     </li>
                     <li class="floor-item">
                         <a href="./list.html?categoryId=100012">
-                            <span class="floor-text">手机</span>
-                            <img class="floor-img" src="../resource/floor2-2.jpg" alt="手机" />
+                            <span class="floor-text">PSV</span>
+                            <img class="floor-img" src="../resource/floor2-2.jpg" alt="PSV" />
                         </a>
                     </li>
                     <li class="floor-item">
                         <a href="./list.html?categoryId=100013">
-                            <span class="floor-text">平板电脑</span>
-                            <img class="floor-img" src="../resource/floor2-3.jpg" alt="平板电脑" />
+                            <span class="floor-text">3DS</span>
+                            <img class="floor-img" src="../resource/floor2-3.jpg" alt="3DS" />
                         </a>
                     </li>
                     <li class="floor-item">
                         <a href="./list.html?categoryId=100014">
-                            <span class="floor-text">数码相机</span>
-                            <img class="floor-img" src="../resource/floor2-4.jpg" alt="数码相机" />
+                            <span class="floor-text">Wii</span>
+                            <img class="floor-img" src="../resource/floor2-4.jpg" alt="Wii" />
                         </a>
                     </li>
                     <li class="floor-item">
                         <a href="./list.html?categoryId=100015">
-                            <span class="floor-text">3C配件</span>
-                            <img class="floor-img" src="../resource/floor2-5.jpg" alt="3C配件" />
+                            <span class="floor-text">Xbox ONE</span>
+                            <img class="floor-img" src="../resource/floor2-5.jpg" alt="Xbox ONE" />
                         </a>
                     </li>
                 </ul>
             </div>
             <div class="floor-wrap">
-                <h1 class="floor-title">F3 服装箱包</h1>
+                <h1 class="floor-title">ESHOP手机</h1>
                 <ul class="floor-list">
                     <li class="floor-item">
                         <a href="./list.html?categoryId=100016">
-                            <span class="floor-text">女装</span>
-                            <img class="floor-img" src="../resource/floor3-1.jpg" alt="女装" />
+                            <span class="floor-text">智能手机</span>
+                            <img class="floor-img" src="../resource/floor3-1.jpg" alt="智能手机" />
                         </a>
                     </li>
                     <li class="floor-item">
                         <a href="./list.html?categoryId=100017">
-                            <span class="floor-text">帽子专区</span>
-                            <img class="floor-img" src="../resource/floor3-2.jpg" alt="帽子专区" />
+                            <span class="floor-text">儿童手机</span>
+                            <img class="floor-img" src="../resource/floor3-2.jpg" alt="儿童手机" />
                         </a>
                     </li>
                     <li class="floor-item">
                         <a href="./list.html?categoryId=100018">
-                            <span class="floor-text">旅行箱</span>
-                            <img class="floor-img" src="../resource/floor3-3.jpg" alt="旅行箱" />
+                            <span class="floor-text">老人手机</span>
+                            <img class="floor-img" src="../resource/floor3-3.jpg" alt="老人手机" />
                         </a>
                     </li>
                     <li class="floor-item">
                         <a href="./list.html?categoryId=100019">
-                            <span class="floor-text">手提包</span>
-                            <img class="floor-img" src="../resource/floor3-4.jpg" alt="手提包" />
+                            <span class="floor-text">商务手机</span>
+                            <img class="floor-img" src="../resource/floor3-4.jpg" alt="商务手机" />
                         </a>
                     </li>
                     <li class="floor-item">
                         <a href="./list.html?categoryId=100020">
-                            <span class="floor-text">保暖内衣</span>
-                            <img class="floor-img" src="../resource/floor3-5.jpg" alt="保暖内衣" />
+                            <span class="floor-text">户外手机</span>
+                            <img class="floor-img" src="../resource/floor3-5.jpg" alt="户外手机" />
                         </a>
                     </li>
                 </ul>
             </div>
             <div class="floor-wrap">
-                <h1 class="floor-title">F4 食品生鲜</h1>
+                <h1 class="floor-title">ESHOP电脑</h1>
                 <ul class="floor-list">
                     <li class="floor-item">
                         <a href="./list.html?categoryId=100021">
-                            <span class="floor-text">最爱零食</span>
-                            <img class="floor-img" src="../resource/floor4-1.jpg" alt="最爱零食" />
+                            <span class="floor-text">笔记本电脑</span>
+                            <img class="floor-img" src="../resource/floor4-1.jpg" alt="笔记本电脑" />
                         </a>
                     </li>
                     <li class="floor-item">
                         <a href="./list.html?categoryId=100022">
-                            <span class="floor-text">生鲜</span>
-                            <img class="floor-img" src="../resource/floor4-2.jpg" alt="生鲜" />
+                            <span class="floor-text">台式电脑</span>
+                            <img class="floor-img" src="../resource/floor4-2.jpg" alt="台式电脑" />
                         </a>
                     </li>
                     <li class="floor-item">
                         <a href="./list.html?categoryId=100023">
-                            <span class="floor-text">半成品菜</span>
-                            <img class="floor-img" src="../resource/floor4-3.jpg" alt="半成品菜" />
+                            <span class="floor-text">一体机</span>
+                            <img class="floor-img" src="../resource/floor4-3.jpg" alt="一体机" />
                         </a>
                     </li>
                     <li class="floor-item">
                         <a href="./list.html?categoryId=100024">
-                            <span class="floor-text">速冻专区</span>
-                            <img class="floor-img" src="../resource/floor4-4.jpg" alt="速冻专区" />
+                            <span class="floor-text">平板电脑</span>
+                            <img class="floor-img" src="../resource/floor4-4.jpg" alt="平板电脑" />
                         </a>
                     </li>
                     <li class="floor-item">
                         <a href="./list.html?categoryId=100025">
-                            <span class="floor-text">进口牛奶</span>
-                            <img class="floor-img" src="../resource/floor4-5.jpg" alt="进口牛奶" />
+                            <span class="floor-text">服务器</span>
+                            <img class="floor-img" src="../resource/floor4-5.jpg" alt="服务器" />
                         </a>
                     </li>
                 </ul>
             </div>
             <div class="floor-wrap">
-                <h1 class="floor-title">F5 酒水饮料</h1>
+                <h1 class="floor-title">ESHOP音响耳机</h1>
                 <ul class="floor-list">
                     <li class="floor-item">
                         <a href="./list.html?categoryId=100026">
-                            <span class="floor-text">白酒</span>
-                            <img class="floor-img" src="../resource/floor5-1.jpg" alt="白酒" />
+                            <span class="floor-text">蓝牙耳机</span>
+                            <img class="floor-img" src="../resource/floor5-1.jpg" alt="蓝牙耳机" />
                         </a>
                     </li>
                     <li class="floor-item">
                         <a href="./list.html?categoryId=100027">
-                            <span class="floor-text">红酒</span>
-                            <img class="floor-img" src="../resource/floor5-2.jpg" alt="红酒" />
+                            <span class="floor-text">运动耳机</span>
+                            <img class="floor-img" src="../resource/floor5-2.jpg" alt="运动耳机" />
                         </a>
                     </li>
                     <li class="floor-item">
                         <a href="./list.html?categoryId=100028">
-                            <span class="floor-text">饮料</span>
-                            <img class="floor-img" src="../resource/floor5-3.jpg" alt="饮料" />
+                            <span class="floor-text">头罩式耳机</span>
+                            <img class="floor-img" src="../resource/floor5-3.jpg" alt="头罩式耳机" />
                         </a>
                     </li>
                     <li class="floor-item">
                         <a href="./list.html?categoryId=100029">
-                            <span class="floor-text">调制鸡尾酒</span>
-                            <img class="floor-img" src="../resource/floor5-4.jpg" alt="调制鸡尾酒" />
+                            <span class="floor-text">迷你音响</span>
+                            <img class="floor-img" src="../resource/floor5-4.jpg" alt="迷你音响" />
                         </a>
                     </li>
                     <li class="floor-item">
                         <a href="./list.html?categoryId=100030">
-                            <span class="floor-text">进口洋酒</span>
-                            <img class="floor-img" src="../resource/floor5-5.jpg" alt="进口洋酒" />
+                            <span class="floor-text">HIFI</span>
+                            <img class="floor-img" src="../resource/floor5-5.jpg" alt="HIFI" />
                         </a>
                     </li>
                 </ul>
@@ -246,11 +246,11 @@
             <a class="link" href="https://www.zhihu.com" target="_blank">知乎</a>
         </div>
         <p class="copyright">
-            Copyright © 2017 eshop.com All Right Reserved
+            Copyright © 2018 eshop.com All Right Reserved
         </p>
     </div>
 </div>
 <script type="text/javascript" src="http://cdn.bootcss.com/jquery/1.11.3/jquery.min.js
 "></script>
-    <script type="text/javascript" src="../js/base.js?5fb466d57efeffeab18b"></script><script type="text/javascript" src="../js/index.js?5fb466d57efeffeab18b"></script></body>
+    <script type="text/javascript" src="../js/base.js?5bffb66769e2c3835673"></script><script type="text/javascript" src="../js/index.js?5bffb66769e2c3835673"></script></body>
 </html>
