--- a/src/main/webapp/fe/css/detail.css
+++ b/src/main/webapp/fe/css/detail.css
@@ -260,6 +260,7 @@
     background: #eee;
 }
 .comment-table .cell{
+    padding: 20px;
     font-size: 20px;
     border-bottom: 1px dashed #eee;
     background: #fafafa;
