--- a/src/main/webapp/admin/view/index.html
+++ b/src/main/webapp/admin/view/index.html
@@ -4,13 +4,12 @@
 <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <meta name="description" content="MMALL ADMIN">
-    <meta name="author" content="Rosen">
-    <title>MMALL ADMIN</title>
-<link rel="shortcut icon" href="../favicon.ico"><link href="../css/app.css?437e83006a7ce0441a40" rel="stylesheet"></head>
+    <meta name="description" content="ESHOP ADMIN">
+    <title>ESHOP ADMIN</title>
+<link rel="shortcut icon" href="../favicon.ico"><link href="../css/app.css?89bbc05d1aa6e7c7f1a1" rel="stylesheet"></head>
 <body>
     <div id="app"></div>
     <script src="//cdn.bootcss.com/jquery/1.12.4/jquery.min.js"></script>
-<script type="text/javascript" src="../js/base.js?437e83006a7ce0441a40"></script><script type="text/javascript" src="../js/app.js?437e83006a7ce0441a40"></script></body>
+<script type="text/javascript" src="../js/base.js?89bbc05d1aa6e7c7f1a1"></script><script type="text/javascript" src="../js/app.js?89bbc05d1aa6e7c7f1a1"></script></body>
 
 </html>
