--- a/src/main/webapp/fe/view/detail.html
+++ b/src/main/webapp/fe/view/detail.html
@@ -6,10 +6,10 @@
 <meta name="keywords" content="eshop">
 <meta name="description" content="ESHOP电子产品公司">
 <meta name="apple-mobile-web-app-capable" content="yes">
-<meta name="viewport" content="width=100px, initial-scale=1, maximum-scale=1">
+<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
         <title>商品详情页 - ESHOP电子</title>
-    <link href="../css/common.css?5bffb66769e2c3835673" rel="stylesheet"><link href="../css/detail.css?5bffb66769e2c3835673" rel="stylesheet"></head>
+    <link href="../css/common.css?a9ce01b4e508199ce5e1" rel="stylesheet"><link href="../css/detail.css?a9ce01b4e508199ce5e1" rel="stylesheet"></head>
     <body>
         <div class="nav">
     <div class="w">
@@ -81,5 +81,5 @@
 </div>
 <script type="text/javascript" src="http://cdn.bootcss.com/jquery/1.11.3/jquery.min.js
 "></script>
-    <script type="text/javascript" src="../js/base.js?5bffb66769e2c3835673"></script><script type="text/javascript" src="../js/detail.js?5bffb66769e2c3835673"></script></body>
+    <script type="text/javascript" src="../js/base.js?a9ce01b4e508199ce5e1"></script><script type="text/javascript" src="../js/detail.js?a9ce01b4e508199ce5e1"></script></body>
 </html>
